--- a/templates/Vanilla/TypeScript/package.json
+++ b/templates/Vanilla/TypeScript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ejs-js",
+  "name": "vanilla-js",
   "private": true,
   "version": "0.0.0",
   "description": "",
@@ -10,14 +10,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.4.1",
-    "body-parser": "^1.20.2",
-    "ejs": "^3.1.9"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.16",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
