--- a/templates/WebSocket/TypeScript/package.json
+++ b/templates/WebSocket/TypeScript/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "start": "node build/index.js",
     "dev": "ts-node-dev src/index.ts",
